// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmenitiesIcon should match snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "padding": 4,
      },
      undefined,
    ]
  }
>
  <Icon
    allowFontScaling={false}
    color="#33495E"
    name="balcony"
    size={40}
  />
  <Typography
    adjustsFontSizeToFit={true}
    fontWeight="regular"
    minimumFontScale={0.5}
    size="small"
    style={
      Array [
        Object {
          "color": "#33495E",
        },
        Object {
          "marginStart": 6,
        },
      ]
    }
    variant="text"
  >
    Some Label
  </Typography>
</View>
`;

exports[`AmenitiesIcon should match snapshot 2`] = `
<Fragment>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "justifyContent": "space-around",
          "marginHorizontal": 10,
        },
        undefined,
      ]
    }
  >
    <Icon
      allowFontScaling={false}
      color="#33495E"
      name="balcony"
      size={40}
    />
    <Typography
      adjustsFontSizeToFit={true}
      fontWeight="regular"
      minimumFontScale={0.5}
      size="small"
      style={
        Array [
          Object {
            "color": "#33495E",
          },
          Object {
            "alignItems": "center",
          },
        ]
      }
      variant="text"
    >
      Some Label
    </Typography>
  </View>
  <Divider
    containerStyles={
      Object {
        "borderColor": "#F0F5F9",
        "borderWidth": 1,
        "height": 25,
      }
    }
  />
</Fragment>
`;
